# qrt-qaoa-resource-routing

./: LICENSE  NOTICE  README.md  pyproject.toml
docs/: methodology.md  validation_plan.md
examples/: scenarios.json
results/: acid_regolith_exact.json  summary.json  thermal_regulation_exact.json  water_recovery_exact.json
scripts/: run_all.py  run_exact.py  run_qiskit_sweep.py
src/qrt_qaoa_routing/: __init__.py  bitstrings.py  energy.py  qiskit_optional.py  scenarios.py  solve.py
tests/: test_routing.py
